<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_graph">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/setting_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inputdesign"
                        android:minHeight="40dp"
                        android:ems="10"
                        android:id="@+id/editTextDob"
                        android:layout_weight="1"
                        android:enabled="true"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date" />

                    <ImageButton
                        android:id="@+id/imageButtonDoB"
                        android:layout_height="40dp"
                        android:background="@drawable/calendar"
                        android:layout_width="40dp"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:text="@string/setting_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@drawable/inputdesign"
                    android:minHeight="40dp"
                    android:ems="10"
                    android:id="@+id/editTextName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/setting_img"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView7"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
                        android:id="@+id/imButton"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:padding="3dp" />
                </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/placeholder_baby"
                    android:id="@+id/imView"
                    android:background="#ddd"
                    android:alpha=".5" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <TextView
                    android:text="@string/setting_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/btn_fr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="1"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/imageFr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/france" />

                        <TextView
                            android:id="@+id/textFr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Français"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_ar"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:layout_weight="1"
                        android:alpha="0.5">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/morocco"
                            android:id="@+id/imageAr"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="عربية"
                            android:id="@+id/textAr"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_usa"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:alpha="0.5">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/unitedkingdom"
                            android:id="@+id/imageUs"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="English"
                            android:id="@+id/textUs"
                            android:layout_gravity="center" />
                    </LinearLayout>

                </LinearLayout>

            1</LinearLayout>

            <Button
                android:text="@string/setting_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyButton"
                android:textColor="#fff"
                android:id="@+id/buttonSave" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
